# doc-preprocess-hub

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  docker-compose.yml  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sbom.yml
benchmarks/: README.md  parsing_eval.py  pii_eval.py  sla_eval.py
docs/: deployment.md  design-principles.md  security.md
schema/: 001_init.sql
sdk/python/: README.md  pyproject.toml
sdk/python/doc_preprocess_hub/: __init__.py  client.py
services/console/: README.md
services/orchestrator/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/orchestrator/app/: celery_app.py  config.py  db.py  main.py  models.py  router.py  schemas.py
services/orchestrator/app/api/: health.py  jobs.py
services/orchestrator/migrations/: env.py
services/orchestrator/migrations/versions/: 20260101_0000_initial_schema.py
services/orchestrator/tests/: test_health.py  test_router.py
services/worker-docling/: Dockerfile  README.md  pyproject.toml
services/worker-docling/app/: tasks.py
services/worker-mineru/: Dockerfile  README.md  pyproject.toml
services/worker-mineru/app/: tasks.py
services/worker-postproc/: Dockerfile  README.md  pyproject.toml
services/worker-postproc/app/: tasks.py
