[project]
name = "doc-preprocess-hub"
version = "0.1.0"
description = "Python SDK for doc-preprocess-hub"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-httpx>=0.30"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["doc_preprocess_hub*"]
