[project]
name = "dph-worker-docling"
version = "0.1.0"
description = "docling worker — Office, HTML, native PDFs, emails"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
    "minio>=7.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    # TODO(engine): add docling runtime dependency once the engine is wired in.
    # "docling>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
