[project]
name = "dph-worker-postproc"
version = "0.1.0"
description = "Post-processing — PII redaction + chunking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
    "minio>=7.2",
    "pydantic>=2.8",
    "structlog>=24.4",
    # TODO: pin these once the pipeline is wired in.
    # "presidio-analyzer>=2.2",
    # "presidio-anonymizer>=2.2",
    # "langchain-text-splitters>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
